--- a/index.html
+++ b/index.html
@@ -1,40 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Index</title>
+	<script type="text/javascript" src="js/jQuery-3.5.1.min.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8">
 </head>
 <body>
+<nav>
+  <ul>
+    <!-- <li><a href="accueil.html">Accueil</a></li> -->
+    <li><a href="competences.html">Compétences</a></li>
+    <li><a href="cv.html">Cv</a></li>
+    <li><a href="#">Centre d'interet</a></li>
+    <li><a href="formulaire.html">Me contacter</a></li>
+  </ul>
+</nav>
+
+<div class="container">
 
 
 <center>
-	<div class="bouton">
-			<div class="rond2">
-				<div class="rond1"><div id='warped'>
-                     <span class='w0'>P</span><span class='w1'>U</span><span class='w2'>S</span><span class='w3'>H</span>
-              </div></div>
-			</div>
-	</div>
+  <div class="cercle">
+    <div id='warped'>
+         <span class='w0'>P</span><span class='w1'>o</span><span class='w2'>r</span><span class='w3'>t</span><span class='w4'>o</span><span class='w5'>f</span><span class='w6'>o</span><span class='w7'>l</span><span class='w8'>i</span><span class='w9'>o</span><span class='w10'> </span><span class='w11'>d</span><span class='w12'>e</span><span class='w13'> </span><span class='w14'>J</span><span class='w15'>o</span><span class='w16'>s</span><span class='w17'>s</span><span class='w18'> </span><span class='w19'>F</span><span class='w20'>i</span><span class='w21'>l</span><span class='w22'>i</span><span class='w23'>p</span><span class='w24'>p</span><span class='w25'>i</span>
+    </div>
+    
+  </div>
 </center>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 </body>
 </html>
