--- a/formulaire.html
+++ b/formulaire.html
@@ -28,9 +28,9 @@
             <span>Total de caractères : <span id="compteur_caractere">0</span><span>/200</span></span>
             <button>Valider</button>
         </form> 
-      </center>
-
-      <footer>
+          <div class="message">
+          Navrez Mr Moussa ne m'a pas encore appris à récupérer les messages par formulaire, dans le doute, vous trouverez tous les moyens de communication avec moi dans le bas de la page
+          </div>
         <center>
           <a href="https://github.com/pepsci/"><img class="reseaux" src="icons/github.png"></a>
           <a href="mailto:jossfilippi@gmail.com"><img class="reseaux" src="icons/email.png"></a>
@@ -38,7 +38,8 @@
           <a href="https://twitter.com/lycosse"><img class="reseaux" src="icons/twitter.png"></a>
           <a href="https://www.linkedin.com/in/josse-filippi-211b6311a/"><img class="reseaux" src="icons/in.png"></a>
         </center>  
-      </footer>
+        </center>
+
     </div>
 
 
