--- a/index.html
+++ b/index.html
@@ -19,15 +19,9 @@
 </nav>
 
 <div class="container">
-
-
-<center>
-  <div class="cercle">
-    <div id='warped'>
-         <span class='w0'>P</span><span class='w1'>o</span><span class='w2'>r</span><span class='w3'>t</span><span class='w4'>o</span><span class='w5'>f</span><span class='w6'>o</span><span class='w7'>l</span><span class='w8'>i</span><span class='w9'>o</span><span class='w10'> </span><span class='w11'>d</span><span class='w12'>e</span><span class='w13'> </span><span class='w14'>J</span><span class='w15'>o</span><span class='w16'>s</span><span class='w17'>s</span><span class='w18'> </span><span class='w19'>F</span><span class='w20'>i</span><span class='w21'>l</span><span class='w22'>i</span><span class='w23'>p</span><span class='w24'>p</span><span class='w25'>i</span>
-    </div>
-    
-  </div>
+  <center>
+  
+  <div class="rond"><div class="pf" >Portfolio</div><div class="pf" >Joss</div><div class="pf" >Filippi</div></div>
 </center>
 </div>
 </body>
