--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,7 @@
 <body>
 <div class="scool">
 <a id="cv" href="documents/CV_Mr_Filippi_Josse.pdf">CV au format pdf</a>
+<a id="cv" href="documents/CV_Mr_Filippi_Josse.html">CV au format html</a>
    <h1>CV de Joss Filippi</h1>
 
    <div class="ligne2"></div>
