--- a/interet.html
+++ b/interet.html
@@ -2,8 +2,71 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="css/interet.css">
+	<script type="text/javascript" src="js/jQuery-3.5.1.min.js" ></script>
+	<script type="text/javascript" src="js/interet.js"></script>
 </head>
 <body>
 
+<div class="container">
+	<div class="interet">
+		<div class="card">
+			<div class="image">
+				<div class="circle"></div>
+				<img src="img/sky.png" alt="sky">
+			</div>
+			<div class="info">
+				<h1 class="titre">Le Sky Alpin</h1>
+				<h3>Pratique le sky alpin depuis une trentaine d'années</h3>
+			</div>
+		</div>
+	</div>
+	<!-- <div class="interet">
+		<div class="card">
+			<div class="image">
+				<div class="circle"></div>
+				<img src="img/scie.png" alt="scie">
+			</div>
+			<div class="info">
+				<h1 class="titre">Menuisier amateur</h1>
+				<h3>Pratique la menuiserie en amateur depuis plusieurs années</h3>
+			</div>
+		</div>
+	</div>
+	<div class="interet">
+		<div class="card">
+			<div class="image">
+				<div class="circle"></div>
+				<img src="img/photo.png" alt="photo">
+			</div>
+			<div class="info">
+				<h1 class="titre">Photographe amateur</h1>
+				<h3>Photographe amateur quand j'ai le temps et mon appareil avec moi</h3>
+			</div>
+		</div>
+	</div> -->
+
+
+
+
+ 	 
+</div>		
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
 </body>
 </html>
