--- a/competences.html
+++ b/competences.html
@@ -12,7 +12,7 @@
 		<div class="name">
 			<span>HTML</span>
 			<span>CSS</span>
-			<span>Java script</span>
+			<span>JavaScript</span>
 			<span>JQuery</span>
 			<span>Ajax</span>
 		</div>
