--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Index</title>
+	<title>👨‍💻Index</title>
 	<script type="text/javascript" src="js/jQuery-3.5.1.min.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
@@ -13,7 +13,7 @@
     <!-- <li><a href="accueil.html">Accueil</a></li> -->
     <li><a href="competences.html">Compétences</a></li>
     <li><a href="cv.html">Cv</a></li>
-    <li><a href="#">Centre d'interet</a></li>
+    <li><a href="interet.html">Centre d'interet</a></li>
     <li><a href="formulaire.html">Me contacter</a></li>
   </ul>
 </nav>
@@ -21,7 +21,7 @@
 <div class="container">
   <center>
   
-  <div class="rond"><div class="pf" >Portfolio</div><div class="pf" >Joss</div><div class="pf" >Filippi</div></div>
+  <div class="rondpf"><div class="pf" >Portfolio</div><div class="pf" >Joss</div><div class="pf" >Filippi</div></div>
 </center>
 </div>
 </body>
